# slack-bridge-for-claude-code

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bot/: bot.py  requirements.txt
hooks/: slack-notify-waiting.sh  slack-notify.sh
skill/: SKILL.md  bot.py
skill/hooks/: slack-notify-waiting.sh  slack-notify.sh
tests/: conftest.py  test_bot.py
