[project]
name = "slack-bridge-for-claude-code"
version = "1.0.0"
description = "Bidirectional Slack integration for Claude Code"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "flake8>=7.0",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
